<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:background="#8333"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" 
            android:contentDescription="@string/logo"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/register_username"
                android:layout_width="160dp"
                android:layout_height="30dp"
                android:background="#afff"
                android:inputType="none"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/register_email"
                android:layout_width="160dp"
                android:layout_height="30dp"
                android:background="#afff"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/register_passwrod"
                android:layout_width="160dp"
                android:layout_height="30dp"
                android:background="#afff"
                android:inputType="textPassword"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/password_again"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/register_passwrod_again"
                android:layout_width="160dp"
                android:layout_height="30dp"
                android:background="#afff"
                android:inputType="textPassword"
                android:singleLine="true" />
        </LinearLayout>

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:text="@string/register"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/register_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/register_to_login"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>