<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:background="#8333"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" 
            android:contentDescription="@string/logo"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="18sp"
                android:text="@string/username" />

           <EditText
                android:id="@+id/login_username"
                android:layout_width="160dp"
                android:layout_height="30dp"
                android:background="#afff"
                android:inputType="none"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:textSize="18sp"
                android:text="@string/password" />

             <EditText
                android:id="@+id/login_passwrod"
                android:layout_width="160dp"
                android:layout_height="30dp"
                android:background="#afff"
                android:inputType="textPassword"
                android:singleLine="true" />
        </LinearLayout>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:textSize="18sp"
            android:text="@string/login" />

        <TextView
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/no_accout_to_register" />
    </LinearLayout>

</LinearLayout>