<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/document"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <!-- 游戏左侧的菜单栏 -->

    <LinearLayout
        android:id="@+id/chessWithComputerMenu"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        android:background="#8000"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="15dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/player"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/segerate" />

            <TextView
                android:id="@+id/competer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/playerChessImg"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:contentDescription="@string/player" />
            
            <ImageView
                android:id="@+id/computerChessImg"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:contentDescription="@string/computer"
                android:text="@string/computer" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currentPlayer" />

            <TextView
                android:id="@+id/currentPlayer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
             />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time" />

            <Chronometer
                android:id="@+id/time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:format="%s"
                android:gravity="center_horizontal"
                android:text="@string/time"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/regretBtn"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:text="@string/regret"
                android:textSize="16sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/gameSetting"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:text="@string/gameSetting"
                android:textSize="16sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/exitGame"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:text="@string/exitGame"
                android:textSize="16sp"
                tools:ignore="ButtonStyle" />
            
            <TextView 
                android:id="@+id/errorLog"
                android:layout_marginTop="5dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
    </LinearLayout>

    <!-- 棋盘布局 -->

    <RelativeLayout
        android:id="@+id/chessWithComputerBg"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="2dp"
        android:layout_weight="5"
        android:background="@drawable/chessgrid"
        android:gravity="center" >

        <GridView
            android:id="@+id/chessWithComputerBgGrid"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:horizontalSpacing="1pt"
            android:listSelector="@android:color/transparent"
            android:numColumns="15"
            android:verticalSpacing="1pt" />
    </RelativeLayout>

</LinearLayout>