<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/chess_bg1"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/result"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:gravity="center"
        android:textColor="#f000"
        android:layout_marginBottom="50dp"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:layout_weight="1" />
		<Button 
		    android:id="@+id/onceMore"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:textSize="18sp"
            android:background="#90FF6100"
           	android:text="@string/onceMore"
		    />
        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1" />
		<Button 
		    android:id="@+id/exitGameDirect"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:textSize="18sp"
            android:background="#90FF6100"
            android:text="@string/exitGameDirect"
		    />
        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>